--- a/css/style.css
+++ b/css/style.css
@@ -855,6 +855,8 @@ input[type="checkbox"]:checked + label::after {
     padding-top: 26px;
     padding-bottom: 32px;
     border-bottom: 1px solid rgb(229, 229, 229);
+    color: #000000;
+    background-color: #ffffff;
 }
 
 .found {
