--- a/css/style.css
+++ b/css/style.css
@@ -279,11 +279,27 @@ body {
     text-decoration: none;
 }
 
+@keyframes bounce {
+  0%   {
+    transform: translateY(-90px);
+  }
+  70%  {
+    transform: translateY(30px);
+  }
+  90%  {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
 .search-form {
     position: absolute;
     top: 85px;
     left: 0;
     z-index: 1;
+    display: none;
     width: 568px;
     margin: 0 auto;
     padding: 58px 55px 54px;
@@ -293,6 +309,11 @@ body {
     text-align: left;
     color: #000000;
     background: #ffffff;
+}
+
+.search-form-show {
+	display: block;
+	animation: bounce 0.6s;
 }
 
 .search-form .search-form-line {
