--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
 
 .main-navigation li {
     float: left;
-    width: 20%;
+    width: 23%;
     padding-top: 15px;
     padding-bottom: 15px;
     line-height: 26px;
@@ -76,6 +76,7 @@ body {
 }
 
 .main-navigation a:active {
+    color: #000000;
     opacity: 0.3;
 }
 
@@ -83,6 +84,7 @@ body {
 .main-navigation .current:hover,
 .main-navigation .current:active {
     color: #766357;
+    opacity: 1;
 }
 
 .index-logo {
@@ -90,7 +92,13 @@ body {
     top: 0;
     left: 50%;
     z-index: 5;
+    width: 138px;
+    height: 70px;
     margin-left: -69px;
+}
+
+.logo-link:hover:active {
+    opacity: 1;
 }
 
 .index-main {
@@ -121,7 +129,7 @@ body {
 .features-preface {
     margin: 0 auto;
     padding-top: 60px;
-    padding-bottom: 52px;
+    padding-bottom: 51px;
     color: #000000;
     background-color: #ffffff;
 }
@@ -145,25 +153,25 @@ body {
 
 .features-img .item {
     padding: 45px;
+    line-height: 21px;
 }
 
 .features-img h2 {
     width: 153px;
     margin: 0 auto;
-    margin-bottom: 22px;
+    margin-bottom: 26px;
     font-size: 21px;
-    line-height: 21px;
     font-weight: 700;
 }
 
 .features-img span {
     display: block;
-    margin-bottom: 20px;
+    margin-bottom: 21px;
 }
 
 .features-img p {
     margin: 0;
-    line-height: 21px;
+    padding: 0;
 }
 
 .third {
@@ -191,17 +199,21 @@ body {
 .food,
 .gift {
     display: block;
-    margin: 58px auto 30px;
+    margin: 60px auto 29px;
+}
+
+.food {
+    margin-bottom: 30px;
 }
 
 .gift {
-    margin-top: 53px;
-    margin-bottom: 31px;
+    margin-top: 55px;
+    margin-bottom: 30px;
 }
 
 .feature-icons b {
     display: block;
-    margin-bottom: 25px;
+    margin-bottom: 24px;
     font-size: 21px;
     line-height: 21px;
     font-weight: 700;
@@ -219,19 +231,22 @@ body {
 }
 
 .features-last .item {
-    padding: 47px 60px 46px;
+    padding: 47px 60px 59px;
+    line-height: 21px;
 }
 
 .features-last b {
     display: block;
     width: 153px;
-    margin: 0 auto 24px;
+    margin: 0 auto 25px;
     font-size: 21px;
-    line-height: 21px;
     font-weight: 700;
 }
 
 .features-last p {
+    margin: 0;
+    margin-top: 21px;
+    padding: 0;
     font-size: 14px;
     line-height: 21px;
 }
@@ -242,8 +257,8 @@ body {
 }
 
 .interested-container {
-    margin: 0 55px 47px;
-    padding-top: 57px;
+    margin: 0 55px 46px;
+    padding-top: 55px;
     color: #000000;
     background-color: #ffffff;
 }
@@ -251,9 +266,9 @@ body {
 .interested-container h2 {
     margin: 0;
     padding: 0;
-    margin-bottom: 30px;
+    margin-bottom: 27px;
     font-size: 30px;
-    line-height: 24px;
+    line-height: 30px;
     font-weight: 700;
 }
 
@@ -330,7 +345,7 @@ body {
     display: block;
     width: 568px;
     margin: 0 auto;
-    padding: 58px 55px 54px;
+    padding: 56px 55px 54px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     line-height: 26px;
@@ -362,19 +377,30 @@ body {
 
 .search-form label {
     float: left;
-    padding: 5px 0 7px;
+    padding: 6px 0 6px;
 }
 
 .search-form .field {
     float: right;
-    padding: 5px 15px 5px;
+    padding: 6px 13px 6px;
+    height: 38px;
     font: inherit;
     line-height: 26px;
     text-transform: uppercase;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    background: #f2f2f2;
-    border: none;
+    color: #000000;
+    background-color: #f2f2f2;
+    border: 2px solid #f2f2f2;
+}
+
+.search-form .field:hover {
+    background-color: rgb(235, 235, 235);
+}
+
+.search-form .field:focus {
+    background-color: rgb(255, 255, 255);
+    border: 2px solid #f2f2f2;
     outline: none;
 }
 
@@ -385,9 +411,9 @@ body {
 
 .search-form .calendar {
     position: absolute;
-    right: 6px;
+    right: 4px;
     bottom: 0;
-    font-size: 21px;
+    font-size: 0px;
     line-height: 38px;
     color: #c2c2c2;
     cursor: pointer;
@@ -427,12 +453,9 @@ body {
 
 .half-width .number {
     width: 114px;
-    padding-left: 55px;
+    padding-left: 50px;
     padding-right: 50px;
-}
-
-.half-width:first-child .number {
-    margin-right: 3px;
+    text-align: center;
 }
 
 .half-width:last-child label {
@@ -446,7 +469,8 @@ body {
 .number-container .btn {
     position: absolute;
     top: 0;
-    padding: 5px 9px;
+    margin: 0;
+    padding: 0;
     line-height: 26px;
     font-weight: 700;
     color: #a9a9a9;
@@ -456,32 +480,35 @@ body {
 }
 
 .number-container .minus-btn {
-    left: 119px;
+    left: 113px;
+    font-size: 0;
 }
 
 .number-container .plus-btn {
-    right: 3px;
+    right: 0px;
+    font-size: 0;
 }
 
 .half-width:first-child .plus-btn {
-    right: 6px;
+    right: 0px;
 }
 
 .half-width:last-child .minus-btn {
-    left: 123px;
+    left: 116px;
 }
 
 .minus-icon,
 .plus-icon {
-    display: inline-block;
-    vertical-align: top;
+    display: block;
+    width: 38px;
+    height: 38px;
 }
 
 .minus-icon::before {
     content: "";
     position: absolute;
-    bottom: 18px;
-    left: 5px;
+    bottom: 45%;
+    left: 35%;
     display: inline-block;
     vertical-align: top;
     width: 12px;
@@ -504,8 +531,8 @@ body {
 .plus-icon::before {
     content: "";
     position: absolute;
-    bottom: 14px;
-    left: 0px;
+    bottom: 35%;
+    left: 35%;
     display: inline-block;
     vertical-align: top;
     width: 11px;
@@ -542,6 +569,7 @@ body {
 .search-form .find-btn span {
     font-size: 21px;
     line-height: 26px;
+    font-weight: 700;
     text-transform: uppercase;
     color: #ffffff;
 }
@@ -599,7 +627,7 @@ body {
 .footer-social {
     float: left;
     width: 400px;
-    padding: 36px 0 36px 1px;
+    padding: 36px 0 36px;
 }
 
 .social-btn {
@@ -665,7 +693,10 @@ body {
 }
 
 .footer-copyright span {
-    line-height: 39px;
+    display: inline-block;
+    padding: 5px 5px 5px 0;
+    line-height: 26px;
+    vertical-align: middle;
 }
 
 .btn-academy {
@@ -673,7 +704,7 @@ body {
     width: 113px;
     height: 39px;
     font-size: 0;
-    vertical-align: top;
+    vertical-align: middle;
     text-decoration: none;
     background-color: #ffffff;
     background: url("../img/sprite-academy.png") 0 0 no-repeat;
@@ -717,9 +748,7 @@ body {
 }
 
 .fourth:first-child fieldset {
-    margin: 0;
     padding-right: 45px;
-    border: 0;
 }
 
 .fourth label {
@@ -737,34 +766,36 @@ body {
 .filter-form {
     padding-top: 29px;
     padding-bottom: 8px;
+    line-height: 21px;
 }
 
 .filter-form legend {
     margin-bottom: 22px;
     font-size: 16px;
-    line-height: 21px;
     font-weight: 700;
     text-transform: uppercase;
 }
 
-input[type="checkbox"] {
+.filter-form input[type="checkbox"] {
     display: none;
 }
 
-input[type="checkbox"] + label {
+.infrastructure label,
+.accomodation-type label {
     position: relative;
     display: block;
     margin: 0;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     padding-left: 39px;
     cursor: pointer;
 }
 
-.accomodation-type input[type="checkbox"] + label {
+.accomodation-type label {
     padding-left: 42px;
 }
 
-input[type="checkbox"] + label::before {
+.infrastructure label::before,
+.accomodation-type label::before {
     content: "";
     position: absolute;
     top: 0;
@@ -775,12 +806,12 @@ input[type="checkbox"] + label::before {
     background-position: -10px -94px;
 }
 
-input[type="checkbox"]:disabled + label::before,
-input[type="checkbox"]:disabled:checked + label::after {
+.filter-check:disabled + label::before,
+.filter.check:disabled:checked + label::after {
     opacity: 0.3;
 }
 
-input[type="checkbox"]:checked + label::after {
+.filter-check:checked + label::after {
     content: "";
     position: absolute;
     top: 0;
@@ -854,6 +885,7 @@ input[type="checkbox"]:checked + label::after {
     padding: 0;
     color: inherit;
     font: inherit;
+    line-height: 21px;
     background: none;
     border: none;
 }
@@ -981,12 +1013,6 @@ input[type="checkbox"]:checked + label::after {
     text-decoration: none;
 }
 
-.sorting .active {
-    color: #81b3d2;
-    border-bottom: none;
-    cursor: text;
-}
-
 .sorting a:hover {
     color: #81b3d2;
 }
@@ -994,6 +1020,13 @@ input[type="checkbox"]:checked + label::after {
 .sorting a:active {
     color: #000000;
     border: none;
+}
+
+.sorting .active,
+.sorting .active:active {
+    color: #81b3d2;
+    border-bottom: none;
+    cursor: text;
 }
 
 .sorting-btn {
@@ -1005,7 +1038,7 @@ input[type="checkbox"]:checked + label::after {
 .sorting-btn a {
     display: inline-block;
     vertical-align: bottom;
-    font-size: 14px;
+    font-size: 0px;
     text-align: center;
 }
 
@@ -1052,6 +1085,7 @@ input[type="checkbox"]:checked + label::after {
 .view-results {
     padding-top: 29px;
     padding-bottom: 30px;
+    line-height: 21px;
     color: #000000;
     background-color: #ffffff;
     border-bottom: 1px solid rgb(229, 229, 229);
@@ -1074,16 +1108,16 @@ input[type="checkbox"]:checked + label::after {
 .view-results .hotel-container {
     display: inline-block;
     width: 544px;
-    margin-top: -2px;
+    margin-top: -5px;
     vertical-align: top;
 }
 
 .hotel-container h2 {
     display: block;
     margin: 0;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
     font-size: 21px;
-    line-height: 21px;
+    line-height: 26px;
     font-weight: 700;
 }
 
@@ -1097,12 +1131,14 @@ input[type="checkbox"]:checked + label::after {
 }
 
 .hotel-name:active:hover {
+    color: #000000;
     opacity: 0.3;
 }
 
 .hotel-type {
     display: inline-block;
-    margin-bottom: 9px;
+    margin-bottom: 14px;
+    vertical-align: top;
 }
 
 .hotel-type span {
@@ -1164,7 +1200,7 @@ input[type="checkbox"]:checked + label::after {
 
 .ratio {
     display: block;
-    padding: 1px;
+    padding: 2px 5px 4px 16px;
     padding-left: 15px;
     color: #666666;
     background-color: #f2f2f2;
@@ -1176,7 +1212,8 @@ input[type="checkbox"]:checked + label::after {
 
 .stars {
     display: block;
-    margin-bottom: 38px;
+    margin-bottom: 43px;
+    font-size: 0px;
     text-align: right;
 }
 
@@ -1184,7 +1221,7 @@ input[type="checkbox"]:checked + label::after {
     position: relative;
     display: inline-block;
     width: 17px;
-    margin-left: 3px;
+    margin-left: 7px;
     vertical-align: top;
     text-align: right;
 }
@@ -1198,6 +1235,7 @@ input[type="checkbox"]:checked + label::after {
     margin-right: 5px;
     width: 17px;
     height: 17px;
+    vertical-align: top;
     background: url("../img/spritesheet.png") 0 0 no-repeat;
     background-position: -10px -325px;
 }
